bridge/base/0-jjjabcdgithubio-namespace.yaml
#! 0-jjjabcdgithubio-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: jjjabcdgithubio
    labels:
        com.docker.compose.project: jjjabcdgithubio
